Update <table> element converters

--- a/tests/Fixture/HelloWorld.html
+++ b/tests/Fixture/HelloWorld.html
@@ -24,3 +24,18 @@
 <p><a href="https://pilipinews.github.io/">Pilipinews</a></p>
 
 <p><a href="https://zapheus.github.io/">https://zapheus.github.io/</a></p>
+
+<table>
+    <tr>
+        <td>Name</td>
+        <td>Site</td>
+    </tr>
+    <tr>
+        <td>Zapheus</td>
+        <td>https://zapheus.github.io/</td>
+    </tr>
+    <tr>
+        <td>Zapheus</td>
+        <td>https://zapheus.github.io/</td>
+    </tr>
+</table>
