Update HTML converters

--- a/tests/Fixture/HelloWorld.html
+++ b/tests/Fixture/HelloWorld.html
@@ -2,7 +2,7 @@
 
 <h1>Hello World!</h1>
 
-<p>Lorem ipsum dolor sit amet, <em>consectetur</em> adipisicing elit. Numquam odit beatae rem, sed cupiditate laboriosam officia adipisci soluta <b>assumenda</b> vitae magni odio ea ducimus voluptates aspernatur, nostrum nulla excepturi voluptatem. <em></em></p>
+<p>Lorem ipsum dolor sit amet, <em>consectetur (http://www.google.com)</em> adipisicing elit. Numquam odit beatae rem, sed cupiditate laboriosam officia adipisci soluta <b>assumenda</b> vitae magni odio ea ducimus voluptates aspernatur, nostrum nulla excepturi voluptatem. <em></em></p>
 
 <blockquote>This is a blockquote</blockquote>
 
