--- a/tests/Fixture/HelloWorld.html
+++ b/tests/Fixture/HelloWorld.html
@@ -4,6 +4,10 @@
 
 <p>Lorem ipsum dolor sit amet, <em>consectetur (http://www.google.com)</em> adipisicing elit. Numquam odit beatae rem, sed cupiditate laboriosam officia adipisci soluta <b>assumenda</b> vitae magni odio ea ducimus voluptates aspernatur, nostrum nulla excepturi voluptatem. <em></em></p>
 
+<p>1. Illo, suscipit, iste. Magni molestiae incidunt amet fugiat, harum voluptatum.</p>
+
+<p>>Molestias explicabo quos esse dolorem provident ipsam? Quo, &lt;!--quisquam--&gt;!</p>
+
 <blockquote>This is a blockquote</blockquote>
 
 <ul>
