--- a/tests/Fixture/HelloWorld.html
+++ b/tests/Fixture/HelloWorld.html
@@ -1,4 +1,4 @@
-<p><img src="https://pilipinews.github.io/img/logo.jpg"></p>
+<p><img src="https://pilipinews.com/img/logo.jpg"></p>
 
 <h1>Hello World!</h1>
 
@@ -25,7 +25,7 @@
     <li>Post it as a post in Facebook</li>
 </ol>
 
-<p><a href="https://pilipinews.github.io/">Pilipinews</a></p>
+<p><a href="https://pilipinews.com/">Pilipinews</a></p>
 
 <p><a href="https://zapheus.github.io/">https://zapheus.github.io/</a></p>
 
